add job to queue and has config
